1Annee/tob/tps/.svn/pristine/55/55cf70d14dff1688ff3f85d3bcbe44ed5a330dfe.svn-base
allumettes/Jouer.java:63: error: cannot find symbol
		}catch (StrategieNotFoundException e) {
		        ^
  symbol:   class StrategieNotFoundException
  location: class Jouer
1 error
